fix image distortion

--- a/src/styles/components/img.scss
+++ b/src/styles/components/img.scss
@@ -2,6 +2,11 @@ img {
   display: block;
   max-height: 40rem;
   max-width: 100%;
+
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+  object-position: left top;
 }
 
 img.large {
